[gd_scene load_steps=12 format=3 uid="uid://b25xc8rg2w0wb"]

[ext_resource type="Script" path="res://scenes/stores/nuclear_bomb/nuclear_bomb.gd" id="1_wk13y"]
[ext_resource type="Texture2D" uid="uid://diisp34lfcb2j" path="res://resources/images/store/explosion_mushroom.png" id="2_fwdmp"]
[ext_resource type="Texture2D" uid="uid://c0gs2snikb5is" path="res://resources/images/store/nuclear_bomb_fly.png" id="2_lfi6m"]
[ext_resource type="Texture2D" uid="uid://gbn1reuvq5d7" path="res://resources/images/store/nuclear_bomb.png" id="2_nn83m"]
[ext_resource type="AudioStream" uid="uid://dm3m3nmm7d1bh" path="res://resources/sound/battlefield/Tieng-lua-chay.mp3" id="3_hkec7"]

[sub_resource type="Animation" id="Animation_k3r0e"]
length = 1.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animation/bomb_launch_up:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Animation/bomb_launch_down/explosion_mushroom:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Animation/bomb_launch_down/bomb:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_d0th3"]
resource_name = "explosion"
length = 5.2
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animation/bomb_launch_down/explosion_mushroom:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4, 2.6, 2.8, 3, 3.2, 3.4, 3.6, 3.8, 4, 4.2, 4.4, 4.6, 4.8, 5, 5.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26]
}

[sub_resource type="Animation" id="Animation_56atr"]
resource_name = "launch_down"
length = 1.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animation/bomb_launch_down/bomb:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_nyjdl"]
resource_name = "launch_up"
length = 1.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animation/bomb_launch_up:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fl247"]
_data = {
"RESET": SubResource("Animation_k3r0e"),
"explosion": SubResource("Animation_d0th3"),
"launch_down": SubResource("Animation_56atr"),
"launch_up": SubResource("Animation_nyjdl")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oa1yv"]
resource_local_to_scene = true
size = Vector2(303.339, 635.792)

[node name="NuclearBomb" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_wk13y")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fl247")
}

[node name="AttackCooldownTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Animation" type="Node2D" parent="."]

[node name="bomb_launch_down" type="Node2D" parent="Animation"]

[node name="explosion_mushroom" type="Sprite2D" parent="Animation/bomb_launch_down"]
visible = false
position = Vector2(-49, -546)
scale = Vector2(2, 2)
texture = ExtResource("2_fwdmp")
hframes = 9
vframes = 3
region_rect = Rect2(4, 4, 178, 185)

[node name="bomb" type="Sprite2D" parent="Animation/bomb_launch_down"]
visible = false
rotation = 3.14159
scale = Vector2(0.66, 0.66)
texture = ExtResource("2_lfi6m")
hframes = 6

[node name="bomb_launch_up" type="Sprite2D" parent="Animation"]
visible = false
position = Vector2(512.624, 147.011)
scale = Vector2(0.66, 0.66)
texture = ExtResource("2_lfi6m")
hframes = 6
region_rect = Rect2(4, 4, 178, 185)

[node name="bomb" type="Sprite2D" parent="Animation"]
position = Vector2(308, 425)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_nn83m")
hframes = 3
region_rect = Rect2(4, 4, 178, 185)

[node name="Control_bomb" type="Control" parent="Animation/bomb"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -208.019
offset_top = -401.908
offset_right = -208.019
offset_bottom = -401.908
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_oa1yv")

[node name="move" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_hkec7")
volume_db = -5.0
autoplay = true
bus = &"InBattleFX"

[connection signal="gui_input" from="Animation/bomb/Control_bomb" to="." method="_on_control_bomb_gui_input"]
